# monet

./: .gitignore  .scratch-logo-concepts.html  .scratch-logo-lily.html  .scratch-logo-quill.html  .scratch-logo-sunrise.html  .scratch-logo-sunrise2.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  windows-build.yml
scripts/: bundle-tray.sh  create-latest-json.mjs  release.sh  setup-signing.sh  sync-version.sh  update-pricing-snapshot.mjs
scripts/bench/: render-bench.mjs
src/: App.vue  main.ts  prose.css
src-tauri/: CCSpace.entitlements  Cargo.toml  Info.plist  Monet.entitlements  build.rs  schema-support.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  automation.rs  cache.rs  channels.rs  claude_locator.rs  cli_env.rs  cli_settings.rs  commands.rs  config.rs  cron_expr.rs  dashboard.rs  discovery.rs  image_protocol.rs  lib.rs  menu.rs  metadata.rs  parser.rs  path_env.rs  perf.rs  permission.rs  pricing-snapshot.json  pricing.rs  probe.rs  proc_ext.rs  proc_scan.rs  quota.rs  routine_run.rs  routine_types.rs  routines.rs  runner_store.rs  runners.rs  scheduler.rs  search.rs  signing.rs  streaming.rs  tcc.rs  translate.rs  tray.rs  tray_agent.rs  turn_signal.rs  (+5 more)
src-tauri/src/models/: content_block.rs  mod.rs  project.rs  session_record.rs  session_summary.rs  token_usage.rs
src-tauri/src/native/: high_refresh.m  tcc_check.c
src-tray/: Info.plist
src-widget/: CCSpaceWidgetExtension.entitlements  MonetWidgetExtension.entitlements  build.sh  com.ccspace.widget-updater.plist  io.github.zenolab124.monet.widget-updater.plist  project.yml
src-widget/Sources/: ActiveProjectsView.swift  CCSpaceWidget.swift  CostView.swift  HeatmapView.swift  Info.plist  ModelMixView.swift  MonetWidget.swift  MonthlyDashboardView.swift  ProjectBoardView.swift  StreakView.swift  TodaySummaryProvider.swift  TodaySummaryView.swift  TokenPulseView.swift  TokenTrendView.swift  WeeklySummaryView.swift  WidgetData.swift  WidgetPalette.swift  WorkRhythmView.swift
src-widget/Sources/en.lproj/: Localizable.strings
src-widget/Sources/zh-Hans.lproj/: Localizable.strings
src/components/: ActionBar.vue  ActivityBar.vue  AsyncTaskCard.vue  AsyncTaskDetail.vue  AsyncTaskPanel.vue  ConfirmDialog.vue  FileLedgerPanel.vue  FileLedgerTimeline.vue  IMAGE_INPUT_INTEGRATION.md  InputImageArea.vue  InputImageThumbnail.vue  MessageBlock.vue  MessageGroup.vue  MsgClamp.vue  PERMISSION_INTEGRATION.md  PerfHud.vue  PermissionCard.vue  PlanApprovalCard.vue  ProjectSidebar.vue  QuestionCard.vue  SLASH_COMMANDS_INTEGRATION.md  SessionAnchorNav.vue  SessionBanner.vue  SessionDetail.vue  SessionList.vue  SlashCommandPanel.vue  SlashHelpCard.vue  SplitView.vue  SubAgentPanel.vue  SystemEventRow.vue  SystemSessionViewer.vue  TitleBar.vue  TitleBarTools.vue  Toolbar.vue  UserMsgContent.vue
src/components/automation/: RoutineForm.vue
src/components/blocks/: BlockCommandName.vue  BlockDocument.vue  BlockIdeOpenedFile.vue  BlockIdeSelection.vue  BlockImage.vue  BlockImageMeta.vue  BlockPersistedOutput.vue  BlockSkillPrompt.vue  BlockSystemEvent.vue  BlockSystemReminder.vue  BlockTaskNotification.vue  BlockText.vue  BlockThinking.vue  BlockToolResult.vue  BlockToolUse.vue  BlockToolUseError.vue  BlockUnknown.vue  MdSegment.vue  index.ts
src/components/home/: BranchActivityCard.vue  CostEstimateCard.vue  DashboardSection.vue  DiagnosisCard.vue  HeatmapCard.vue  HomeCard.vue  HomeGrid.vue  ModelPreferenceCard.vue  ProjectActivityCard.vue  RecentSessionsCard.vue  SessionDepthCard.vue  StreakCard.vue  TodaySummaryCard.vue  TokenCard.vue  WidgetIframe.vue  WorkRhythmCard.vue
src/components/notifications/: TitleBarNotifications.vue  ToastStack.vue
src/components/runner/: RunnerChipBar.vue  RunnerDockList.vue  RunnerLogView.vue  RunnerNewDialog.vue  RunnerPanel.vue
src/components/settings/: AgentIframeDemo.vue  ChannelForm.vue  ChannelModelMap.vue  ClaudeBinaryCard.vue  ClaudeCodeSettings.vue  ClaudeDataDirCard.vue  ClaudeEnvCard.vue  OfficialDefaultsForm.vue  PaperSelect.vue  PermissionsEditor.vue  PermissionsPanel.vue  SortableChainItem.vue  TurnSignalCard.vue
src/components/topbar/: ChannelDropdown.vue  ContextProgress.vue  EffortDropdown.vue  INTEGRATION.md  ModelDropdown.vue  SessionTopBar.vue  (+2 more)
src/composables/: themeRegistry.ts  useAgentSearch.ts  useAppDefaults.ts  useAsyncTasks.ts  useAutomation.ts  useChannels.ts  useCliDefaults.ts  useCliSettings.ts  useColumnResize.ts  useConfirm.ts  useFileLedger.ts  useHomeStats.ts  useHooks.ts  useHorizontalWheelScroll.ts  useImageInput.ts  useLocale.ts  useMarkdown.ts  useMemory.ts  useModelOptions.ts  useNotifications.ts  usePerfMonitor.ts  usePermissionHints.ts  usePermissionRequests.ts  usePlatform.ts  useProjects.ts  useRaceInput.ts  useRoutines.ts  useRunConfig.ts  useRunners.ts  useSearch.ts  useSessionDetail.ts  useSessionMeta.ts  useSessionSettings.ts  useSessionStatus.ts  useSessions.ts  useShortcuts.ts  useSlashCommands.ts  useSplitLayout.ts  useStreamSegments.ts  useStreaming.ts  (+10 more)
src/directives/: tooltip.ts
src/features/: index.ts
src/locales/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  index.ts  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  th-TH.json  vi-VN.json  zh-CN.json
src/styles/: extends.css
src/types/: index.ts
src/utils/: ansi.ts  askQuestions.ts  bootTrace.ts  ccimg.ts  dangerousOps.ts  imageCompress.ts  imageValidate.ts  modelContext.ts  modelEnv.ts  path.ts  perfProbe.ts  storageMigrate.ts  toolPair.ts
src/views/: AutomationView.vue  HomeView.vue  SearchView.vue  SessionsView.vue  SettingsView.vue  WorkbenchView.vue  WorkshopView.vue
tests/unit/: fileLedger.test.ts  findSafeSplit.test.ts  goldenSamples.test.ts  modelEnv.test.ts
(+77 files in other folders)
