[package]
name = "app"
version = "2.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 独立的 stdio MCP server 二进制，被 claude CLI 通过 --mcp-config 拉起
[[bin]]
name = "cc-space-mcp"
path = "src/bin/cc_space_mcp.rs"

# Claude Code 数据格式差距探测器（dev 工具），读 schema-support.json 声明做三态 diff
[[bin]]
name = "schema-probe"
path = "src/bin/schema_probe.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
# ProMotion 高刷解锁:编译 src/native/high_refresh.m(swizzle 需在 WKWebView 创建前就位)
cc = "1"

[dependencies]
# preserve_order：读改写 ~/.claude/settings.json（状态跟踪扩展）时保住用户键序
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dirs = "6"
log = "0.4"
regex = "1"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
rayon = "1.10"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# 工坊域(v2.3.0):frontmatter 解析。unmaintained 但 PRD 明示允许,只用于小段 YAML
serde_yaml = "0.9"
# 工坊域(v2.3.0):MCP http 探活(FR-005)。default-features=false 砍掉无关默认件;
# native-tls 走平台 TLS(macOS Security.framework / Windows SChannel),https 端点探活必需,
# 且避免 rustls 默认链的 aws-lc-rs 重编译负担
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "blocking", "json"] }
tauri-plugin-window-state = "2.4.1"
cron = "0.15"
base64 = "0.22"
# ccimg 协议图片按需取的字节上限 LRU 缓存（64MB 水位）
lru = "0.16"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
tauri-plugin-dialog = "2.7.1"

[[bin]]
name = "cc-space-routine-runner"
path = "src/bin/cc_space_routine_runner.rs"

[[bin]]
name = "widget-updater"
path = "src/bin/widget_updater.rs"
