[package]
name = "app"
version = "0.1.29"
description = "Monet — Mission Control for Claude Code"
authors = ["Zeno"]
license = "MIT"
repository = "https://github.com/zenolab124/monet"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 独立的 stdio MCP server 二进制，被 claude CLI 通过 --mcp-config 拉起
[[bin]]
name = "monet-mcp"
path = "src/bin/monet_mcp.rs"

# Claude Code 数据格式差距探测器（dev 工具），读 schema-support.json 声明做三态 diff
[[bin]]
name = "schema-probe"
path = "src/bin/schema_probe.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
# ProMotion 高刷解锁:编译 src/native/high_refresh.m(swizzle 需在 WKWebView 创建前就位)
cc = "1"

[dependencies]
# preserve_order：读改写 ~/.claude/settings.json（状态跟踪扩展）时保住用户键序
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dirs = "6"
# 会话自定义 CLI 参数的 shell 式解析（引号值支持）
shell-words = "1"
log = "0.4"
regex = "1"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
rayon = "1.10"
tauri = { version = "2.10.3", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# 工坊域(v2.3.0):frontmatter 解析。unmaintained 但 PRD 明示允许,只用于小段 YAML
serde_yaml = "0.9"
# 工坊域(v2.3.0):MCP http 探活(FR-005)。default-features=false 砍掉无关默认件;
# native-tls 走平台 TLS(macOS Security.framework / Windows SChannel),https 端点探活必需,
# 且避免 rustls 默认链的 aws-lc-rs 重编译负担
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "blocking", "json"] }
tauri-plugin-window-state = "2.4.1"
cron = "0.15"
base64 = "0.22"
# ccimg 协议图片按需取的字节上限 LRU 缓存（64MB 水位）
lru = "0.16"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
urlencoding = "2"
# ccimg 缩略图降采样解码
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# monet-tray 独立二进制直接使用底层 menu crate，无需 Tauri runtime；
# 图标层为手写原生 NSStatusItem（菜单弹出走 AppKit 标准路径）
muda = "0.17"
libc = "0.2"
tauri-plugin-process = "2.3.1"

# macOS: monet-tray 的原生 NSStatusItem 图标层 + attributed-title 菜单样式。
# 这些 crate 本就是 muda 的传递依赖，直接声明只为启用额外 features；
# 注意 features 必须显式列全，不能依赖其他 crate 传递启用（依赖变动会静默丢失）
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSString", "NSDictionary", "NSArray", "NSObject",
    "NSAttributedString", "NSEnumerator", "NSRange",
    "NSData", "NSGeometry", "NSDate", "NSRunLoop", "NSThread",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSFont", "NSParagraphStyle", "NSText", "NSAttributedString",
    "NSMenu", "NSMenuItem", "NSStatusItem", "NSColor",
    "NSApplication", "NSResponder", "NSRunningApplication",
    "NSStatusBar", "NSStatusBarButton", "NSButton", "NSControl",
    "NSView", "NSCell", "NSImage",
    "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["CFCGTypes"] }

# 标题栏亮暗直调 DWM（不经 tauri set_theme，避免污染 WebView 的 prefers-color-scheme）
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[[bin]]
name = "monet-tray"
path = "src/bin/monet_tray.rs"

[[bin]]
name = "monet-routine-runner"
path = "src/bin/monet_routine_runner.rs"

[[bin]]
name = "widget-updater"
path = "src/bin/widget_updater.rs"
